Added more buffs and debuffs

--- a/App.config
+++ b/App.config
@@ -15,5 +15,24 @@
 		<add key="weaponKey" value="F9"/>
 		<add key="upperHgKey" value="F9"/>
 		<add key="armorKey" value="F9"/>
+		<add key="hp2KeyBox" value="F9"/>
+		<add key="hp3KeyBox" value="F9"/>
+		<add key="strKey" value="F9"/>
+		<add key="peonyBox" value="F9"/>
+		<add key="agiKey" value="F9"/>
+		<add key="vitKey" value="F9"/>
+		<add key="dexKey" value="F9"/>
+		<add key="intKey" value="F9"/>
+		<add key="lukKey" value="F9"/>
+		<add key="defKey" value="F9"/>
+		<add key="mdefKey" value="F9"/>
+		<add key="daehKey" value="F9"/>
+		<add key="taeKey" value="F9"/>
+		<add key="concentKey" value="F9"/>
+		<add key="awakeKey" value="F9"/>
+		<add key="anodyneKey" value="F9"/>
+		<add key="botKey" value="F9"/>
+	    <add key="cursedKey" value="F9"/>
+		<add key="speedKey" value="F9"/>
 	</appSettings>
 </configuration>
